chapitres/15/original/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailpit
  name: mailpit
spec:
  type: ClusterIP
  ports:
  - name: smtp
    port: 1025
    protocol: TCP
    targetPort: 1025
  - name: http
    port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    app: mailpit
